--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,19 @@
-#container {
+.form-container {
+  max-width: 400px;
+  margin: 0 auto;
+  padding-top: 20px;
+}
+
+.resultado {
+  margin-top: 20px;
   text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  font-size: 1.2em;
+  font-weight: bold;
+  color: #12b909;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+ion-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
 }
